--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/tt
-    username: postgres
-    password: postgres
+    url: jdbc:postgresql://${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB_NAME}
+    username: ${POSTGRES_USERNAME}
+    password: ${POSTGRES_PASSWORD}
     driver-class-name: org.postgresql.Driver
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
@@ -17,9 +17,13 @@ spring:
         secret-key: secret
       bucket:
         default:
-          url: https://some_host:some_port
-          name: bucket_name
+          name: tt-nts
 server:
   servlet:
     context-path: /api/v1/
   port: 8888
+logging:
+  level:
+    org:
+      springframework:
+        web: DEBUG
