--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,8 @@
 spring:
+  servlet:
+    multipart:
+      max-request-size: 10MB
+      max-file-size: 10MB
   mvc:
     mapping: "/**"
     allowed:
@@ -20,8 +24,8 @@ spring:
     aws:
       region: us-east-1
       credentials:
-        access-key: access
-        secret-key: secret
+        access-key: ${AWS_ACCESS_KEY}
+        secret-key: ${AWS_SECRET_KEY}
       bucket:
         default:
           name: tt-nts
@@ -34,3 +38,4 @@ logging:
     org:
       springframework:
         web: DEBUG
+
