--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -2,3 +2,6 @@ spring.test.database.replace=none
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.cloud.aws.region=us-east-1
+spring.cloud.aws.credentials.secret-key=qqq
+spring.cloud.aws.credentials.access-key=qqq
