--- a/src/main/resources/liquibase/changelog.yml
+++ b/src/main/resources/liquibase/changelog.yml
@@ -31,6 +31,9 @@ databaseChangeLog:
                   name: content
                   type: VARCHAR(255)
               - column:
+                  name: downloadable
+                  type: boolean
+              - column:
                   name: owner_id
                   type: BIGINT
                   constraints:
