--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,6 +22,7 @@ spring:
     open-in-view: false
   cloud:
     aws:
+      is_active: ${FILE_MODE_AWS:true}
       region: us-east-1
       credentials:
         access-key: ${AWS_ACCESS_KEY}
