--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -25,11 +25,11 @@ spring:
       is_active: ${FILE_MODE_AWS:false}
       region: us-east-1
       credentials:
-        access-key: from_env
-        secret-key: from_env
+        access-key: ${AWS_ACCESS_KEY}
+        secret-key: ${AWS_SECRET_KEY}
       bucket:
         default:
-          name: from_env
+          name: ${AWS_BUCKET_NAME}
 server:
   servlet:
     context-path: /api/v1/
